Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13555

Assertion `!item->null_value' failed in Type_handler::Item_send_str

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3(EOL)
    • 10.3.1
    • Data types
    • None

    Description

      CREATE TABLE t1 (c VARCHAR(8));
      INSERT INTO t1 VALUES (NULL),('bar');
      SELECT RPAD( c, 0, '?' ) FROM t1;
      

      10.3 92f9be495b7

      mysqld: /data/src/10.3/sql/sql_type.cc:5044: bool Type_handler::Item_send_str(Item*, Protocol*, st_value*) const: Assertion `!item->null_value' failed.
      170816 17:53:47 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f780df34ee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x00005590367e621c in Type_handler::Item_send_str (this=0x559037c6ad50 <type_handler_varchar>, item=0x7f77b8014c38, protocol=0x7f77b8001098, buf=0x7f7800343200) at /data/src/10.3/sql/sql_type.cc:5044
      #9  0x00005590367e9954 in Type_handler_string_result::Item_send (this=0x559037c6ad50 <type_handler_varchar>, item=0x7f77b8014c38, protocol=0x7f77b8001098, buf=0x7f7800343200) at /data/src/10.3/sql/sql_type.h:1659
      #10 0x000055903654a9b0 in Item::send (this=0x7f77b8014c38, protocol=0x7f77b8001098, buffer=0x7f7800343200) at /data/src/10.3/sql/item.h:724
      #11 0x00005590365468ea in Protocol::send_result_set_row (this=0x7f77b8001098, row_items=0x7f77b8004f08) at /data/src/10.3/sql/protocol.cc:985
      #12 0x00005590365ca2ee in select_send::send_data (this=0x7f77b80154b0, items=...) at /data/src/10.3/sql/sql_class.cc:2823
      #13 0x000055903668ee8e in end_send (join=0x7f77b80154d0, join_tab=0x7f77b80168d0, end_of_records=false) at /data/src/10.3/sql/sql_select.cc:20021
      #14 0x000055903668ca0c in evaluate_join_record (join=0x7f77b80154d0, join_tab=0x7f77b8016520, error=0) at /data/src/10.3/sql/sql_select.cc:19078
      #15 0x000055903668c4b0 in sub_select (join=0x7f77b80154d0, join_tab=0x7f77b8016520, end_of_records=false) at /data/src/10.3/sql/sql_select.cc:18897
      #16 0x000055903668b8b5 in do_select (join=0x7f77b80154d0, procedure=0x0) at /data/src/10.3/sql/sql_select.cc:18398
      #17 0x0000559036664cd5 in JOIN::exec_inner (this=0x7f77b80154d0) at /data/src/10.3/sql/sql_select.cc:3540
      #18 0x0000559036664182 in JOIN::exec (this=0x7f77b80154d0) at /data/src/10.3/sql/sql_select.cc:3335
      #19 0x000055903666534d in mysql_select (thd=0x7f77b8000b00, tables=0x7f77b8014dd0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7f77b80154b0, unit=0x7f77b80046a0, select_lex=0x7f77b8004de0) at /data/src/10.3/sql/sql_select.cc:3735
      #20 0x0000559036659ab8 in handle_select (thd=0x7f77b8000b00, lex=0x7f77b80045d8, result=0x7f77b80154b0, setup_tables_done_option=0) at /data/src/10.3/sql/sql_select.cc:376
      #21 0x0000559036625d3c in execute_sqlcom_select (thd=0x7f77b8000b00, all_tables=0x7f77b8014dd0) at /data/src/10.3/sql/sql_parse.cc:6441
      #22 0x000055903661c82a in mysql_execute_command (thd=0x7f77b8000b00) at /data/src/10.3/sql/sql_parse.cc:3694
      #23 0x0000559036629778 in mysql_parse (thd=0x7f77b8000b00, rawbuf=0x7f77b80148d8 "SELECT RPAD( c, 0, '?' ) FROM t1", length=32, parser_state=0x7f7800345200, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:7896
      #24 0x000055903661775a in dispatch_command (command=COM_QUERY, thd=0x7f77b8000b00, packet=0x7f77b808fb41 "", packet_length=32, is_com_multi=false, is_next_command=false) at /data/src/10.3/sql/sql_parse.cc:1814
      #25 0x00005590366160d4 in do_command (thd=0x7f77b8000b00) at /data/src/10.3/sql/sql_parse.cc:1372
      #26 0x0000559036765fe6 in do_handle_one_connection (connect=0x559039536570) at /data/src/10.3/sql/sql_connect.cc:1354
      #27 0x0000559036765d73 in handle_one_connection (arg=0x559039536570) at /data/src/10.3/sql/sql_connect.cc:1260
      #28 0x0000559036bc3e0f in pfs_spawn_thread (arg=0x5590395532b0) at /data/src/10.3/storage/perfschema/pfs.cc:1862
      #29 0x00007f780fe79494 in start_thread (arg=0x7f7800346700) at pthread_create.c:333
      #30 0x00007f780dff193f in clone () from /lib/x86_64-linux-gnu/libc.so.6
      

      Reproducible with both MyISAM and InnoDB.
      Not reproducible on 10.2.

      Attachments

        Activity

          People

            bar Alexander Barkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.